@@ -1,4 +1,5 @@
 jar.class.path=epsgraphics_classes.jar acme_encoding.jar jel_g.jar \
+ ivoafits-notamfits-0.2.jar \
  ../util/util.jar ../pal/pal.jar ../table/table.jar \
  ../mirage/mirage.jar ../treeview/treeview.jar \
  ../help/jhall.jar
